code25_all/scala/12003854.txt
class A

var buffer = Buffer[(A, Int)]()

val a = new A
buffer += (a, 0) // error

a
(a, 0)
A
(A, Int)
scala> def make {
     | val a = new A
     | buffer += (a, 0)
     | }
<console>:11: error: type mismatch;
 found   : A
 required: (A, Int)
       buffer += (a, 0)
              ^

val a = new A
val tuple = (a, 0)
buffer += tuple

